# DeepStrain

./: .gitignore  Black_Hole_Notes.md  CITATION.cff  CLAUDE.md  JOURNAL.md  LICENSE  PLAN.md  README.md  ROADMAP.md  dashboard.py  make_lightcone_diagrams.py  monitor_vm.sh  neural_network_holography_experiment.md  nn_spacetime.py  paradox.txt  real_blackholes.py  time_orientation.py  verify.sh  watch_GW250114_082203.json  watch_GW250114_082203.md  watch_event.py
primordial_blackhole_search/: README.md  RESULTS.md  main.py  pyproject.toml  requirements.txt
primordial_blackhole_search/data/: manifest.json
primordial_blackhole_search/models/: cnn_history.json  cnn_hl_history.json  cnn_w64_history.json  diag_1e3clip_history.json  diag_3e3clip_history.json  diag_3e4_history.json  diag_5e4_history.json  diag_v2_history.json  semicoherent_history.json  semicoherent_sweep.json  semicoherent_v1def_history.json  semicoherent_v2_history.json  transformer_history.json
primordial_blackhole_search/pbh/: aggregate.py  bankmf.py  config.py  data.py  metrics.py  models.py  progress.py  spectrogram.py  straindata.py  sweep.py  waveforms.py
primordial_blackhole_search/results/: bank_dense.json  bank_golden.json  bank_oracle_B64.json  bank_semiff.json  bank_vs_cnn.json  coinc_eval.json  coinc_eval_cnn_hl.json  coinc_eval_smoke.json  coinc_far.json  coinc_learned.json  coinc_learned_holdout.json  coinc_learned_segments.json  coinc_learned_segments_cnn_hl.json  coinc_stat.json  coinc_triple.json  eval_cnn.json  eval_cnn_track.json  eval_cnn_w64_track_w64.json  eval_semicoherent.json  (+10 more)
(+140 files in other folders)
