[project]
name = "primordial-blackhole-search"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gwosc>=0.8.2",
    "gwpy>=4.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pycbc>=2.10.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
]
